Version 1.0.14:
- Call fsync() after writing the UIDLS file. Suggested by Dimitrios Apostolou.
  Thanks!
- Faster UIDL implementation: Do not create a sorted list of received UIDs. Do
  a binary search for every received UID instead. Patch by Dimitrios Apostolou.
  Thanks!
- Gnulib upate to 2008-05-04. Use getpass-gnu instead of getpass module.

Version 1.0.13:
- Buffer read operations also when TLS/SSL is active. Fixes performance problems
  with GnuTLS, reported by Dimitrios Apostolou.
- Fixed a potential problem with VPATH builds.
- Small optimization in insert_sorted() in pop3.c, by Dimitrios Apostolou.
- Updated gnulib to 2008-02-26. Imported havelib module.
- Use locale-independent c_toupper() instead of toupper() to avoid problems
  with the tr_TR.UTF-8 locale. Reported by S.Çağlar Onur for msmtp. Thanks!
- Support for the Max OS X keychain was added by Jay Soffian (originally for
  msmtp). Thanks a lot!
- Fix typos in the man page.
- Fix network input/output timeouts for W32. Bug reported and fixed by
  Shoorick. Thanks!

Version 1.0.12:
- Gnulib update to 2007-11-27.
- Don't count already retrieved messages twice. This fixes a segfault when
  only_new is off and header or size filtering is on. The bug was introduced in
  the previous change; no released version is affected.
- If a filter decides to delete a mail, then additionally mark it as
  retrieved. This prevents to filter the mail again in a later session when 
  the 'keep' option is set.
- Fix default UIDLS file on the W32 platform: Use '\' as directory separator,
  not '/'. Reported by Ricky Thomas.

Version 1.0.11:
- Update the license of the source code to GPLv3 or later, and change the 
  license of the documentation to the GFDLv1.2 or later.
- Gnulib update to 2007-07-15.
- Add new option -Q / --half-quiet to print only status information but no
  progress information. Suggested by Dimitrios Apostolou.
- Set the default timeout to 180 seconds = 3 minutes. This prevents sessions